<resources>
    <string name="app_name">孕育迹忆</string>
    <string name="host_page">首页</string>
    <string name="login">登录</string>
    <string name="phone_number">手机号</string>
    <string name="identifying_code">验证码</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="resend_identifying_code">%d后重新发送</string>
    <string name="input_correct_phone_number">请输入正确电话号码！</string>
    <string name="shared_preference_uccode">shared_preference_uccode</string>
    <string name="shared_preference_ucid">shared_preference_ucid</string>
    <string name="shared_preference_secode">shared_preference_secode</string>
    <string name="shared_preference_acctStatus">shared_preference_acctStatus</string>
    <string name="shared_preference_msgUrl">shared_preference_msgUrl</string>
    <string name="shared_preference_resourceUrl">shared_preference_resourceUrl</string>
    <string name="shared_preference_user_info">shared_preference_user_info</string>
    <string name="shared_preference_sign_time">shared_preference_sign_time</string>
    <string name="supplement_info">完善个人信息</string>
    <string name="name">姓名</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="club">会所</string>
    <string name="choose">选择</string>
    <string name="next">下一步</string>
    <string name="choose_bron_time">选择预产期</string>
    <string name="artical_content">内容</string>
    <string name="person_info">个人信息</string>
    <string name="headpic">头像</string>
    <string name="nickname">昵称</string>
    <string name="new_nickname">请输入昵称</string>
    <string name="phone_num">手机号</string>
    <string name="phone_num_input">请输入手机号</string>
    <string name="sex">性别</string>
    <string name="address">通讯地址</string>
    <string name="address_change">修改地址</string>
    <string name="address_change_hint">街道门牌信息</string>
    <string name="relaccount">亲友账号</string>
    <string name="mine">我的</string>
    <string name="sign_record">签到记录</string>
    <string name="growup_comeon">成长加油站</string>
    <string name="health_data">健康数据</string>
    <string name="medicine_remind">疫苗提醒</string>
    <string name="my_message">我的消息</string>
    <string name="my_collect">我的收藏</string>
    <string name="photo_manage">照片管理</string>
    <string name="club_introduction">会所介绍</string>
    <string name="my_exit">退出登录</string>
    <string name="health">健康</string>
    <string name="picture">照片</string>
    <string name="ask_and_answer">问答</string>
    <string name="grow_up">成长</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="day_tian">天</string>
    <string name="search_club_info">查询会所信息</string>
    <string name="grow_up_gas_station">成长加油站 &lt;font color="#F06C67"&gt;%s&lt;/font&gt;元</string>
    <string name="message_tip">消息提醒</string>
    <string name="my_health">我的健康</string>
    <string name="health_analysis">健康情况分析</string>
    <string name="test_health">近期，妈妈的体重增加，睡眠良好。精神较好</string>
    <string name="know_more">了解更多</string>
    <string name="other">其他</string>
    <string name="activity">活动</string>
    <string name="knowledge">知识</string>
    <string name="food">饮食</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="retract">收起</string>
    <string name="baby">宝宝</string>
    <string name="weight">体重</string>
    <string name="head_size">头围</string>
    <string name="height">身高</string>
    <string name="temperature">体温</string>
    <string name="chest">胸围</string>
    <string name="blood_sugar">血糖</string>
    <string name="blood_pressure">血压</string>
    <string name="sleep">睡眠</string>
    <string name="excretion">脐带是否脱落</string>
    <string name="cord">脐带</string>
    <string name="physiology">生理性</string>
    <string name="sunday">日</string>
    <string name="born">出生</string>
    <string name="normal">正常</string>
    <string name="well">良好</string>
    <string name="eat">进食</string>
    <string name="drinked">喂水</string>
    <string name="food_eat">食物摄入</string>
    <string name="physiology_param">生理性参数</string>
    <string name="aurigo">黄疸</string>
    <string name="eczema">湿疹</string>
    <string name="red_buttock">红臀</string>
    <string name="search">搜索</string>
    <string name="my_question">我的问题</string>
    <string name="mother_zone">妈妈专区</string>
    <string name="baby_zone">宝宝专区</string>
    <string name="zero_three_months">0-3个月</string>
    <string name="three_months_one_year">3个月-1岁</string>
    <string name="one_half_years">1岁-1岁半</string>
    <string name="one_three_years">1岁半-3岁</string>
    <string name="question_list">问题列表</string>
    <string name="pregnancy">孕期</string>
    <string name="after_child_birth">产后</string>
    <string name="confinement">月子中</string>
    <string name="confinement_after">月子后</string>
    <string name="knowledge_list">知识列表</string>
    <string name="please_input_name">请填写姓名</string>
    <string name="please_inpute_birthday">请填写预产期</string>
    <string name="click_again">再按一次退出</string>
    <string name="photo">照片</string>
    <string name="ask_question">提问</string>
    <string name="publish">发布</string>
    <string name="edit_tab">编辑标签</string>
    <string name="complete">完成</string>
    <string name="add_tab">添加标签</string>
    <string name="upload">上传</string>
    <string name="owned_tabs">所持有标签</string>
    <string name="cancel">取消</string>
    <string name="commit">确认</string>
    <string name="confirm_upload">确认上传</string>
    <string name="upload_count_must_less_than_9">每次最多上传9张图片</string>
    <string name="init_file_failed">初始化文件失败</string>
    <string name="all">全部</string>
    <string name="education">教育</string>
    <string name="personal">个人</string>
    <string name="sign_in">签到</string>
    <string name="collect_success">收藏成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="uploading_picture">图片上传中!</string>
    <string name="upload_complete">上传完成</string>
    <string name="my_medicine">疫苗提醒</string>
    <string name="save">保存</string>
    <string name="please_input_content">请输入要保存的内容</string>
    <string name="add_relate_account">添加亲友账户</string>
    <string name="couple">夫妻</string>
    <string name="kith">亲友</string>
    <string name="relation">关系</string>
    <string name="phone">电话</string>
    <string name="waist">腰围</string>
    <string name="hips">臀围</string>
    <string name="illness_history">病历记录</string>
    <string name="save_data_failed">保存数据失败</string>
    <string name="save_data_success">保存数据成功</string>
    <string name="illness_name">疾病名称</string>
    <string name="input_illness">输入疾病</string>
    <string name="illness_record">病例报告</string>
    <string name="select">选择</string>
    <string name="week">周</string>
    <string name="head">头围</string>
    <string name="can_not_delete">不能删除</string>
    <string name="delete_success">删除成功</string>
    <string name="add">新增</string>
    <string name="time">时间</string>
    <string name="mother">妈妈</string>
    <string name="please_input_real_data">请输入真实数据</string>
    <string name="grow_up_info">成长小贴士</string>
    <string name="submit">提交</string>
    <string name="question">问题</string>
    <string name="vaccine">疫苗</string>
    <string name="length_string">%scm</string>
    <string name="weight_string">%skg</string>
    <string name="temperature_string">%s℃</string>
    <string name="mother_data_visit">妈妈健康数据访问</string>
    <string name="baby_data_visit">宝宝健康数据访问</string>
    <string name="my_answer_visit">我的回答访问访问</string>
    <string name="photo_visit">照片访问</string>
    <string name="tx_new_version">新版本</string>
    <string name="tx_install">安装</string>
    <string name="tx_loading_completed">加载完成</string>
    <string name="tx_loading_failed_please_check_network">加载数据失败，请检查网络是否正常</string>
    <string name="tx_view_details"></string>
    <string name="update_failed">更新失败</string>
    <string name="net_error_please_retry">网络连接失败,请重试!</string>
    <string name="tip">提示</string>
    <string name="retry">重试</string>
    <string name="do_you_delete_me">真的要删除我吗？</string>
    <string name="give_up">放弃</string>
    <string name="please_wait_club_upload_data">请等待会所为您上传数据</string>
    <string name="share_success">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_no_photo">分享图片不存在</string>
    <string name="share_url_invalidate">分享链接无效</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>