<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="50dip"
    android:orientation="vertical">
    <TextView
        android:text="发育指标"
        style="@style/health_data_title" />
    <View style="@style/health_data_divider" />

    <RelativeLayout style="@style/health_data_item_container">
        <TextView
            style="@style/health_data_title"
            android:text="@string/born"/>
        <View style="@style/health_data_item_divider" />
        <TextView
            android:text="2016年8月8日"
            style="@style/health_data_item_data" />
    </RelativeLayout>
    <RelativeLayout style="@style/health_data_item_container">
        <TextView
            style="@style/health_data_title"
            android:text="@string/weight"/>
        <View style="@style/health_data_item_divider" />
        <TextView
            android:text="8.5kg"
            style="@style/health_data_item_data" />
    </RelativeLayout>
    <RelativeLayout
        style="@style/health_data_item_container">
        <TextView
            style="@style/health_data_title"
            android:text="@string/head_size"/>
        <View style="@style/health_data_item_divider" />
        <TextView
            android:text="41.6cm"
            style="@style/health_data_item_data" />
    </RelativeLayout>
    <RelativeLayout
        style="@style/health_data_item_container">
        <TextView
            style="@style/health_data_title"
            android:text="@string/chest"/>
        <View style="@style/health_data_item_divider" />
        <TextView
            android:text="46.3cm"
            style="@style/health_data_item_data" />
    </RelativeLayout>
    <RelativeLayout
        style="@style/health_data_item_container">
        <TextView
            style="@style/health_data_title"
            android:text="@string/height"/>
        <View style="@style/health_data_item_divider" />
        <TextView
            android:text="75.6cm"
            style="@style/health_data_item_data" />
    </RelativeLayout>

    <TextView
        android:text="食物摄入"
        style="@style/health_data_title_margin" />
    <View style="@style/health_data_divider" />
    <RelativeLayout
        style="@style/health_data_state_item_container">
        <TextView
            style="@style/health_data_title"
            android:text="@string/eat"/>
        <TextView
            android:text="母乳"
            style="@style/health_data_state_item_data" />
        <TextView
            android:text="较少"
            style="@style/health_data_state_item_data"
            android:layout_marginLeft="150dip"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/health_data_state_item_container">
        <TextView
            style="@style/health_data_title"
            android:text="@string/drinked"/>
        <TextView
            android:text="900ml"
            style="@style/health_data_state_item_data" />
    </RelativeLayout>
    <RelativeLayout
        style="@style/health_data_state_item_container">
        <TextView
            android:text="宝宝现在喝水正常。"
            style="@style/health_data_state_item_data_desc" />
    </RelativeLayout>

    <TextView
        android:text="@string/excretion"
        style="@style/health_data_title_margin" />
    <View style="@style/health_data_divider" />
    <RelativeLayout style="@style/health_data_item_container">
        <TextView
            style="@style/health_data_title"
            android:text="@string/excretion"/>
        <View style="@style/health_data_item_divider" />
        <TextView
            android:text="排泄情况正常"
            style="@style/health_data_item_data" />
    </RelativeLayout>

    <TextView
        android:text="@string/physiology_param"
        style="@style/health_data_title_margin" />
    <View style="@style/health_data_divider" />
    <RelativeLayout style="@style/health_data_item_container">
        <TextView
            style="@style/health_data_title"
            android:text="@string/aurigo"/>
        <View style="@style/health_data_item_divider" />
        <TextView
            android:text="10"
            style="@style/health_data_item_data" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="(标准值1-10)"/>
    </RelativeLayout>
    <RelativeLayout style="@style/health_data_item_container">
        <TextView
            style="@style/health_data_title"
            android:text="@string/eczema"/>
        <View style="@style/health_data_item_divider" />
        <TextView
            android:text="无"
            style="@style/health_data_item_data" />
    </RelativeLayout>
    <RelativeLayout style="@style/health_data_item_container">
        <TextView
            style="@style/health_data_title"
            android:text="@string/red_buttock"/>
        <View style="@style/health_data_item_divider" />
        <TextView
            android:text="无"
            style="@style/health_data_item_data" />
    </RelativeLayout>
</LinearLayout>