<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/primary_margin"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/ll_mother_weight_form_container"
        style="@style/form_main_container">

        <TextView
            android:text="@string/weight"
            style="@style/form_month" />

        <TextView
            android:id="@+id/tv_mother_value_weight"
            tools:text="65kg"
            android:layout_toLeftOf="@+id/tv_mother_date_weight"
            style="@style/form_value" />
        <View
            android:id="@+id/v_mother_divider_weight"
            style="@style/form_divider" />
        <TextView
            android:id="@+id/tv_mother_date_weight"
            tools:text="10月13日"
            android:layout_toRightOf="@+id/v_mother_divider_weight"
            style="@style/form_date" />

        <RadioGroup
            android:id="@+id/rg_mother_selector_weight"
            style="@style/form_date_selector">
            <RadioButton
                android:id="@+id/rb_mother_weight_date_week"
                android:text="@string/week"
                android:checked="true"
                style="@style/form_date_item" />
            <RadioButton
                android:id="@+id/rb_mother_weight_date_month"
                android:text="@string/month"
                style="@style/form_date_item"/>
        </RadioGroup>

        <com.uuzz.android.ui.view.LineChatView
            android:id="@+id/lcv_mother_weight"
            android:background="#aadea0"
            style="@style/chat" />

    </RelativeLayout>

<!--  体温  -->
    <RelativeLayout
        android:id="@+id/ll_mother_temperature_form_container"
        style="@style/form_main_container">

        <TextView
            android:text="@string/temperature"
            style="@style/form_month" />

        <TextView
            android:id="@+id/tv_mother_value_temperature"
            tools:text="65kg"
            android:layout_toLeftOf="@+id/tv_mother_date_temperature"
            style="@style/form_value" />
        <View
            android:id="@+id/v_mother_divider_temperature"
            style="@style/form_divider" />
        <TextView
            android:id="@+id/tv_mother_date_temperature"
            tools:text="10月13日"
            android:layout_toRightOf="@+id/v_mother_divider_temperature"
            style="@style/form_date" />

        <RadioGroup
            android:id="@+id/rg_mother_selector_temperature"
            style="@style/form_date_selector">
            <RadioButton
                android:id="@+id/rb_mother_temperature_date_week"
                android:text="@string/week"
                android:checked="true"
                style="@style/form_date_item" />
            <RadioButton
                android:id="@+id/rb_mother_temperature_date_month"
                android:text="@string/month"
                style="@style/form_date_item"/>
        </RadioGroup>

        <com.uuzz.android.ui.view.LineChatView
            android:id="@+id/lcv_mother_temperature"
            android:background="#aadea0"
            style="@style/chat" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mother_extra_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dip"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/ll_mother_blood_sugar"
            style="@style/health_info_container">
            <ImageView
                android:src="@drawable/ic_blood_sugar"
                style="@style/health_info_icon" />
            <TextView
                android:text="@string/blood_sugar"
                style="@style/health_info_title" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_mother_blood_pressure"
            style="@style/health_info_container"
            android:layout_marginLeft="22dip"
            android:layout_marginRight="22dip">
            <ImageView
                android:src="@drawable/ic_blood_pressure"
                style="@style/health_info_icon" />
            <TextView
                android:text="@string/blood_pressure"
                style="@style/health_info_title" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_mother_sleep"
            style="@style/health_info_container">
            <ImageView
                android:src="@drawable/ic_sleep"
                style="@style/health_info_icon" />
            <TextView
                android:text="@string/sleep"
                style="@style/health_info_title" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>